--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="src/style.css"/>
+ 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
+   <link rel="stylesheet" href="src/style.css"/>
   <title>Vanilla Weather App</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div class="weather-app">
   <h1>New York</h1>
   <ul>
-    <li>Friday o5:00</li>
+    <li>Friday 05:00</li>
     <li>
       Clear
     </li>
@@ -37,11 +38,11 @@
     </ul>
   </div>
   </div>
-  
-  </div>
   <small>
   <a href="https://github.com/BestLifeEver/vanilla-weather-App" target="_blank">Open  source Code</a> by Victoria Saunders
   </small>
+  </div>
+  
   
   <script src="src/app.js"></script>
 </body>
