--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    <link rel="stylesheet" href="src/style.css"/>
   <title>Vanilla Weather App</title>
 </head>
@@ -14,11 +15,11 @@
     <div class="weather-app-wrapper">
     <div class="weather-app">
       <div class="overview">
-  <h1>New York</h1>
+  <h1 id="city"></h1>
   <ul>
     <li>Friday 05:00</li>
-    <li>
-      Clear
+    <li id="description">
+      
     </li>
   </ul>
   </div>
@@ -28,22 +29,20 @@
     <img src="https://ssl.gstatic.com/onebox/weather/64/rain_s_cloudy.png" alt="Scattered Showers"
     class="float-left"
     />
-    <div class="float-left">
-    <strong>12</strong><span class="units" >°C |<a href="#">°F</a></span>
+    <div class="float-left" style="display:inline-block">
+    <strong id="temperature"></strong><span class="units" >°C |<a href="#" style=" text-decoration:none;">°F</a></span>
   </div>
   </div>
   </div>
   
   <div class="col-6">
     <ul>
+      
       <li>
-        Precipitation: 0%
+        Humidity: <span id="humidity"></span>%
       </li>
       <li>
-        Humidity: 7%
-      </li>
-      <li>
-        Wind: 2  km/h
+        Wind: <span id="wind"></span> km/h
       </li>
     </ul>
   </div>
