Added relevant icon to API

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <div class= "row">
     <div class="col-6">
       <div class="clearfix weather-temperature">
-    <img src="https://ssl.gstatic.com/onebox/weather/64/rain_s_cloudy.png" alt="Scattered Showers"
+    <img src="" alt=""
+    id="icon"
     class="float-left"
     />
     <div class="float-left" style="display:inline-block">
