--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ autocomplete="off"
     class="float-left"
     />
     <div class="float-left" style="display:inline-block">
-    <strong id="temperature"></strong><span class="units" >
-      <a href="#" id="celsius-link"style=" text-decoration:none;" class="active">°C</a> |<a href="#" id="fahrenheit-link" style=" text-decoration:none;">°F</a></span>
+    <strong id="temperature"></strong>
+    <span class="units" >°C</span>
   </div>
   </div>
   </div>
